styles.css
body {
    background-color: #181818;
    font-family: "Roboto";
    color: #B3B3B3;
}

h1 {
    font-size: 96px;
    font-weight: 300;
    text-align: center;
    /* margin-bottom: -240px; */
}

.grid-item {
    border: solid rgba(140, 135, 135, 0.83);
    border-width: 0.01px;
    flex-grow: 1;
    box-sizing: border-box;
    background-color: white;
}

.black-background {
    background-color: black;
}

.grid-container {
    display: flex;
    width: 475px;
    height: 475px;
    flex-wrap: wrap;
    border: solid #535353;
    border-width: 12px;
    border-radius: 7px;
}

.container {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    width: 100vw;
    gap: 67px;
}

.controls-container {
    width: 239px;
    height: 250px;
    background-color: #535353;
    border-radius: 7px;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    gap: 30px;
}

.slider-container {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.slider {
    appearance: none;
    outline: none;
    background: #1ED760;
    width: 100%;
    height: 2px;
    border-radius: 5px;
    margin-bottom: -4px;
}

.slider::-webkit-slider-thumb {
    appearance: none;
    width: 17px;
    height: 17px;
    border-radius: 50%;
    cursor: pointer;
    background: #1ED760;
}

.slider-text {
    color:#1ED760;
    font-size: 14px;
}

.clear {
    background-color: #535353;
    color: #1ED760;
    border: solid #1ED760;
    border-width: thin;
    border-radius: 30px;
    font-size: 14px;
    padding: 5px 10px 5px 10px;
}

.grid-lines {
    background-color: #535353;
    color: #1ED760;
    border: solid #1ED760;
    border-width: thin;
    border-radius: 30px;
    font-size: 14px;
    padding: 5px 10px 5px 10px;
    margin-top: -15px;
}

.grid-lines:hover {
    background-color: #656262;
    cursor: pointer;
}

.clear:hover {
    background-color: #656262;
    cursor: pointer;
}

footer {
    display: flex;
    gap: 5px;
    justify-content: center;
    align-items: center;
    font-size: 20px;
}

.fa-brands.fa-github {
    color: #B3B3B3;
}

.fa-brands.fa-github:hover {
    color: #959595b2;
}

